--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <h2>Hi, I'm Bharanidharan</h2>
                 <div class="mydetail_content">
 		            <span>
-		                I work in a startup company <a href="http://www.tataatsu.com">Tataatsu</a>  as Software Engineer.<br/>
-		                I am passionate about implementing imaginary things through technology. Other than programming, I love Dance, and like to dance.I like a small quotes by <b style="color:orange">Bill Gates</b></br>
+		                I work in a <a href="http://www.tataatsu.com">startup</a> as a Software Engineer.<br/>
+		                I am passionate about implementing innovative stuff through technology. Other than programming, I love to dance. I also love this quote:</br>
 		                <p style="font-style: italic;font-size:19px;">"I choose a lazy person to do a hard job. Because a lazy person will find an easy way to do it. -Bill Gates" .</p> Because i am lazy ;)
 		            </span>
                 </div>
@@ -51,7 +51,7 @@
     <div class="container quotes">
     	<div class="row-fluid">
     		<div class="span12 quotes_message">
-    				<p style="font-style: italic;font-size:19px;">"Keep Loading Stuffs in you and keep rendering it in your style." -Bharanidharan</p>
+    				<p style="font-style: italic;font-size:19px;">"Keep loading stuff in your mind and keep rendering it in your style." -Bharanidharan</p>
 		                
     		</div>
     		
